# JNIHelper

./: CMakeLists.txt  README.md  main.cpp
include/: ClassDefinitions.h  Debug.h  FieldInfo.h  FieldSetter.h  Helper.h  JNIHelper.h  MethodeInfo.h  exceptions.h
include/converter/: DefaultConverter.h  MethodeParameterConverter.h  TypeConverter.h  TypeConverterDefinitions.h
include/signature/: DefaultSignatures.h  Signature.h  SignatureDefinitions.h
java/src/dev/wolveringer/: MainClass.java  TestClass.java
src/: ClassDefinitions.cpp  Debug.cpp  DefaultConverterFunctions.cpp  HelperImpl.cpp  JNIHelper.cpp
test/: JavaTest.cpp
